color misalignment on the overlay corrected

--- a/src/styling/Map.scss
+++ b/src/styling/Map.scss
@@ -23,7 +23,6 @@ $width: calc(100% - 40rem);
       height: 100%;
       width: $width;
       z-index: 1;
-      background-color: rgba(179, 172, 172, 0.3);
       display: flex;
       justify-content: center;
       align-items: center;
